--- a/src/styles/Registrasi.css
+++ b/src/styles/Registrasi.css
@@ -9,18 +9,31 @@
 }
 .daftar{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 3rem;
+    font-size: 60px;
     color:#1B74E4;
     margin: 0;
     float: left;
     margin-left: 5.297rem;
 }
 
+@media (min-width:1280px) {
+.appLogo{
+    font-size: 4%;
+}
+}
+
+@media (max-width:605px) {
+    .daftar{
+        margin: 0;
+    }
+}
 @media (max-width:300px) {
+    .container{
+        margin:0;
+    }
     .daftar{
         font-size: 100%;
         float: center;
-        margin: 0;
     }
     .appLogo{
         width:60%;
