--- a/src/styles/Registrasi.css
+++ b/src/styles/Registrasi.css
@@ -35,6 +35,11 @@
     margin-left:35.234vw ;
     font-size: 3.125vw;
     font-family: Arial, Helvetica, sans-serif;
+    border: #1B74E4 2px solid;
+}
+.tombol:hover{
+    -webkit-box-shadow: inset -0.078vw -0.078vw 1.172vw 0.469vw #F0F2F5; 
+    box-shadow: inset -0.078vw -0.078vw 1.172vw 0.469vw #F0F2F5;
 }
 
 @media (max-width:600px) {
@@ -56,13 +61,29 @@
         float: none;
         margin: auto;
     }
+    .form{
+        margin-top: 1.953vw;
+        flex-direction: column;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
     .input{
+        width: 44.297vw;
+        height: 4vw;
+        border: 2px solid #1B74E4;
+        border-radius: 1.953vw;
+        margin-bottom: 1.953vw;
+        font-size: 3.125vw;
+        font-family: Arial, Helvetica, sans-serif;
+        color:#1B74E4;
         margin-left: 0;
         margin-right: 0;
-        width: 100%;
-        height: auto;
+        width: 90%;
+        height: 7vw;
     }
     .tombol{
         height: auto;
+        margin: 0;
     }
 }
