--- a/src/styles/NavBarCom.css
+++ b/src/styles/NavBarCom.css
@@ -7,7 +7,7 @@
 }
 
 
-.keluar{
+.home{
     width: 2.891vw;
     float: left;
     margin-top:0.273vw;
@@ -49,7 +49,7 @@ p{
     .profil{
         width: 7vw;
     }
-    .keluar{
+    .home{
         width: 7vw;
         margin-left: 10%;
     }
