--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -3,9 +3,11 @@
   font-size: 2.344vw;
 }
 .cardhead {
+  color: black;
   float: left;
   margin-left: 2vw;
   font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
 }
 
 .img1 {
@@ -39,7 +41,7 @@
 }
 
 .Border {
-  margin-top: 13.969vw;
+  margin-top: 3.969vw;
   background-color: whitesmoke;
   margin-left: 13.828vw;
   margin-right: 13.828vw;
@@ -49,12 +51,72 @@
   color: #1b74e4;
 }
 
+.Border2 {
+  margin-top: 2 0.969vw;
+  background-color: whitesmoke;
+  margin-top: 2vw;
+  margin-left: 13.828vw;
+  margin-right: 13.828vw;
+  border-width: 5px;
+  border-radius: 25px;
+  border-style: solid;
+  color: #1b74e4;
+}
+
 .ButtonCmt {
+  border-color: #1b74e4;
+  color: #1b74e4;
+  font-family: Arial, Helvetica, sans-serif;
+  border-radius: 25px;
+  border-width: 5px;
   display: block;
-  background-color: #1b74e4;
+  background-color: #fcfcfc;
   width: 57.641vw;
   margin-left: 7.628vw;
   margin-bottom: 1.58vw;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1.563vw;
+}
+.img4 {
+  float: left;
+  width: 2.344vw;
+  margin-left: 23.571vw;
+}
+.img5 {
+  float: left;
+  width: 2.344vw;
+  margin-left: 1.571vw;
+}
+
+textarea {
+  margin-top: 10vw;
+  margin-left: 13.628vw;
+  width: 69.266vw;
+  border-color: #1b74e4;
+  border-width: 5px;
+  box-sizing: border-box;
+  color: #1b74e4;
+  border-radius: 25px;
+  font-size: 15px;
+  resize: none;
+}
+::placeholder {
+  text-align: left;
+  font-size: 30px;
+}
+.ButtonPst {
+  margin-top: 1vw;
+  margin-left: 71.972vw;
+  border-color: #1b74e4;
+  color: #1b74e4;
+  font-family: Arial, Helvetica, sans-serif;
+  border-radius: 25px;
+  border-width: 5px;
+  display: block;
+  background-color: #fcfcfc;
+  width: 10.641vw;
   text-align: center;
   text-decoration: none;
   display: inline-block;
