--- a/src/styles/CardComment.css
+++ b/src/styles/CardComment.css
@@ -16,7 +16,7 @@
     width: 2.813vw;
     margin-right: 1.172vw;
 }
-.namauser{
+.namauser1{
     color: #1B74E4;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2.344vw;
@@ -26,7 +26,7 @@
 .sunting{
     width: 3.4vw;
     float: left;
-    margin-left: 37.281vw;
+    margin-left: 37.281vw !important;
 }
 .trash{
     margin-left: 1.028vw;
@@ -57,7 +57,7 @@
     margin-top: 1.484vw;
 }
 .input{
-    width: 100%;
+    width: 69vw !important;
     height: 3.125vw;
     font-size: 1.563vw;
     background-color: #F0F2F5;
@@ -75,7 +75,7 @@
     font-size: 1.563vw;
     color:#fff;
     background-color: #1B74E4;
-    margin-left: 83%;
+    margin-left: 81%;
     margin-top: 1.172vw;
 }
 .komen{
