--- a/src/styles/Login2.css
+++ b/src/styles/Login2.css
@@ -1,24 +1,24 @@
-.bg{
+.bg1{
     background-color:F0F2F5;
     width: 100%;
     height: 100%;
 }
-.mychat{
+.mychat1{
     margin-left: 30%;
     width: 7.734vw;
     margin-right:10px;
     float: left;
 }
-.subjek{
+.subjek1{
     color: #1B74E4;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 7.813vw;
 }
-.form{
+.form1{
     margin-top: 1.953vw;
     flex-direction: column;
 }
-.input{
+.input1{
     margin-top: 1.953vw;
     width: 58.672vw;
     height: 4.453vw;
@@ -30,7 +30,7 @@
     padding-left: 2.188vw;
     margin-left: 17%;
 }
-.submit{
+.submit1{
     margin-top: 2.656vw;
     width: 29.453vw;
     height: 4.297vw;
@@ -41,7 +41,7 @@
     color: #fff;
     margin-left: 34%;
 }
-.bawah{
+.bawah1{
     margin-top: 1.953vw;
     flex-direction: column;
     display: flex;
@@ -51,7 +51,7 @@
     font-size: 1.563vw;
     margin-left: 0;
 }
-.belum{
+.belum1{
     font-size: 4vw;
     margin-top: 1.95vw;
     margin: 0;
@@ -59,46 +59,46 @@
     font-size: 1.563vw;
     margin-left: 0;
 }
-.daftar{
+.daftar1{
     margin-left: 0;
     margin-top: 0.391vw;
     color: #1B74E4;
     font-size: 1.563vw;
 }
 @media (max-width:600px){
-    .wrapper{
+    .wrapper1{
     margin-top: 1.953vw;
     flex-direction: column;
     display: flex;
     align-items: center;
     justify-content: center;
     }
-    .mychat{
+    .mychat1{
     width: 30vw;
     float: none;
     margin-left: 8vw;
     }
-    .subjek{
+    .subjek1{
         font-size: 10vw;
         margin-bottom: 0;
         margin-top: 0;
     }
-    .input{
+    .input1{
         width: 95%;
         height: auto;
         font-size: 4vw;
     }
-    .submit{
+    .submit1{
         margin-left:0;
         width: 50%;
         height: fit-content;
         font-size: 4vw;
     }
-    .belum {
+    .belum1 {
         font-size: 4vw;
         margin-left: 0;
     }
-    .daftar {
+    .daftar1 {
         margin-left: 0;
         font-size: 4vw;
     }
