--- a/src/styles/Registrasi.css
+++ b/src/styles/Registrasi.css
@@ -1,22 +1,22 @@
-.kontainer{
+.kontainer3{
     background-color:#F0F2F5;
     padding-top: 3.125vw;
 }
 
-.appLogo{
+.appLogo3{
     width: 4.453vw;
     float: left;
-    margin-left: 25% !important;
+    margin-left: 25% ;
     margin-right: 6.621vw;
 }
-.daftar{
+.daftar3{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 4.688vw !important;
+    font-size: 4.688vw ;
     color:#1B74E4;
     margin-top: 0;
 }
 
-.input{
+.input3{
     width: 72.266vw;
     height: 5.938vw;
     margin-left: 13.835vw;
@@ -26,49 +26,49 @@
     font-size: 3.125vw;
     font-family: Arial, Helvetica, sans-serif;
 }
-.tombol{
-    width: 29.453vw !important;
+.tombol3{
+    width: 29.453vw ;
     height: 4.297vw;
-    background-color: #1B74E4 !important;
+    background-color: #1B74E4 ;
     color: #fff;
     border-radius: 1.953vw;
-    margin-left:30% !important;
+    margin-left:30% ;
     font-size: 3.125vw;
     font-family: Arial, Helvetica, sans-serif;
     border: #1B74E4 2px solid;
 }
-.tombol:hover{
+.tombol3:hover{
     -webkit-box-shadow: inset -0.078vw -0.078vw 1.172vw 0.469vw #F0F2F5; 
     box-shadow: inset -0.078vw -0.078vw 1.172vw 0.469vw #F0F2F5;
 }
 
 @media (max-width:600px) {
-    .kontener{
+    .kontener3{
         display: flex;
         flex-direction: column;
     }
-    .daftar{
+    .daftar3{
         display: flex;
         align-items: center;
         float: none;
         font-size: 12vw;
         
     }
-    .appLogo{
+    .appLogo3{
         display: flex;
         align-items: center;
         width: 20vw;
         float: none;
         margin: auto;
     }
-    .form{
+    .form3{
         margin-top: 1.953vw;
         flex-direction: column;
         display: flex;
         align-items: center ;
         justify-content: center;
     }
-    .input{
+    .input3{
         width: 44.297vw;
         height: 4vw;
         border: 2px solid #1B74E4;
@@ -82,7 +82,7 @@
         width: 90%;
         height: 7vw;
     }
-    .tombol{
+    .tombol3{
         height: auto;
         margin: 0;
     }
